# nornikel_map

./: .gitignore  Makefile  NORNIKEL_Knowledge_Map_presentation.docx  README.md  cleun.py  docker-compose.yml  package.json  run.bat
backend/: .dockerignore  Dockerfile  auth.py  cache.py  chat.py  comparison.py  config.py  demo_data.py  domains.py  experiment_store.py  extraction.py  graph_db.py  import_service.py  ingestion.py  jsonld_export.py  llm_client.py  main.py  notifications.py  ontology.py  postprocess.py  pyproject.toml  requirements-ollama.txt  test_fitz.py  test_fitz2.py  url_import.py  versioning.py  yandex_disk_sync.py
docs/: technical-specification.md  work-plan.md
frontend/: Dockerfile  d3-force.d.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/viewer/: page.tsx
frontend/components/: app-header.tsx  audit-tab.tsx  auth-form.tsx  auth-provider.tsx  chat-tab.tsx  custom-select.tsx  dashboards-tab.tsx  documents-tab.tsx  graph-tab.tsx  notification-settings.tsx  notifications.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/lib/: api.ts  chat-export.ts
frontend/public/extracted_images/Презентация Тяпкина ПА.pptx/: slide_6_img_1.wmf
frontend/public/extracted_images/Презентация для  научного совета.pptx/: slide_2_img_1.tiff
scripts/: import_data.py  reclassify_regions.py
