[project]
name = "backend"
version = "0.1.0"
description = "NORNIKEL R&D Knowledge Map - FastAPI backend (GraphRAG on Neo4j, YandexGPT extraction)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "neo4j>=5.28.0",
    "httpx>=0.27.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "pyjwt>=2.8.0",
]
